# HouseBuildingAssistant

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  SETUP_COMPLETE.md  VERIFICATION_SUMMARY.md  docker-compose.yml  package-lock.json  package.json  playwright.config.ts  start
backend/: .dockerignore  Dockerfile  ENDPOINT_VERIFICATION.md  IMPLEMENTATION_SUMMARY.md  fly.toml  package.json  pyproject.toml  pytest.ini  requirements.txt  seed_test_data.py  test_endpoints.sh
backend/app/: __init__.py  main.py
backend/app/api/: dependencies.py  documents.py  facts.py  messages.py  profiles.py  project_memory.py  projects.py
backend/app/clients/: __init__.py  ai_client.py  openrouter_service.py
backend/app/core/: config.py  memory_domains.py  prompt_templates.py
backend/app/db/: __init__.py  enums.py  models.py  supabase.py
backend/app/schemas/: __init__.py  common.py  document.py  fact_extraction.py  health.py  memory.py  message.py  openrouter.py  profile.py  project.py  usage.py
backend/app/services/: __init__.py  chat_orchestration_service.py  document_retrieval_service.py  document_service.py  fact_extraction_service.py  message_service.py  profile_service.py  project_context_service.py  project_memory_service.py  web_search_service.py
backend/tests/: __init__.py  conftest.py
backend/tests/api/: test_documents.py  test_profiles.py  test_project_memory.py
backend/tests/clients/: test_openrouter_service.py
backend/tests/unit/core/: test_memory_domains.py
backend/tests/unit/services/: __init__.py  test_chat_orchestration_utils.py  (+1 more)
(+156 files in other folders)
